--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1,5 +1,5 @@
 ---
-title             : "Priorization of the good character in perceptual matching depends on self-relevance"
+title             : "Self-relevance modulates the priorization of the good character in perceptual matching"
 shorttitle        : "Priorization of the good character"
 
 author: 
@@ -25,11 +25,10 @@ authornote: |
   Hu Chuan-Peng, School of Psychology, Nanjing Normal University, 210024 Nanjing, China.
   Kaiping Peng, Department of Psychology, Tsinghua University, 100084 Beijing, China.
   Jie Sui, School of Psychology, University of Aberdeen, Aberdeen, Scotland.
-
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Morality is central to social life, moral character is the center of morality. Researchers had long assumed moral character information is prioritized in perceptual process, yet the evidence is scarce. In a series of experiments, we examined the effect of immediately acquired moral character information on perceptual matching. Participants first learned the association between moral characters (labels) and visual cues (shapes), then performed a shape-lable perceptual matching task. The results showed that shapes associated with good moral character were prioritized, as compared to shapes associated with neutral or bad moral characters. This pattern was robust after chaning the words for label or using diagnostic behavioral as an proxy of mroal character. Also, this pattern was robust when changing simultaneous presentation to sequential presentation. We then examined two approximate explanations for this effect: value-based prioritization or social-categorization based prioritization. We manipulated the identity of different moral character explicitly and found that the good character effect was strong when it is self-referential but weak or non-exist when it is other-referential. In further experiments where identity or moral character information were task-irrelevant stimuli, we found that participant care about the character when identity information is salient while the valance is irrelevant, but when valence is task-relevant, people seems only care about the good character's identity but not so much about the neutral or bad character. Together, these results suggested that people are senstive to who is the good character, but less sensitive to who is the neutral or bad character. When the identity information is ambiguous, people may spontaneously referring the good character as self. These results added new evidence for the social vision and suggested the advantage of good character depends on the self-relevance.
+ Morality is central to social life, moral character is the center of morality. Researchers had long assumed moral character information is prioritized in perceptual process, yet the evidence is scarce. In a series of experiments, we examined the effect of immediately acquired moral character information on perceptual matching. Participants first learned the association between moral characters (labels) and visual cues (shapes), then performed a shape-label perceptual matching task. The results revealed that shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. This effect was robust after changing the words for label or using diagnostic behavioral as an proxy of mroal character. Also, this pattern was robust when changing simultaneous presentation to sequential presentation. We then examined two approximate explanations for this effect: value-based prioritization versus social-categorization based prioritization. We manipulated the identity of different moral character explicitly and found that the good character effect was strong when it refers to the self but weak or non-exist when it refers to a stranger. In further experiments where identity or moral character information were presented as task-irrelevant stimuli, we found that participants cared about the character when identity information is salient and valance information is irrelevant, but when valence information is task-relevant but not identity information, participants cared more about the good character's identity than the neutral or bad character. Together, these results suggested that people are senstive to who is the good character, but less sensitive to who is the neutral or bad character. When the identity information is ambiguous, people may spontaneously referring the good character as self. These results added new evidence for the social vision and suggested the advantage of good character depends on the self-relevance.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -87,37 +86,37 @@ Alternative title: The good person is me: Spontaneous self-referential may expla
 social vision --> moral vision --> two competing explanations (value-based vs. true-self-based) --> true-self is not perspective free but self-centered.
 
 [morality is central to social life, moral character is the central of morality]
-People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. Whether we are the agent, target, or a third party of a moral event, we judge the behaviors as "right" or "wrong", and by doing so, we judge moral character of people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. Also, evidence from studies of person perception and social evaluation revealed that morality is a basic dimension for social evaluation and it is weighed more than traits from other dimensions such as competence and sociability [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006]. The importance of moral character may have been internalized to individuals' self-concept and the positive moral self is the most important aspect of identity [e.g., @strohminger_true_2017], and moral character is a standard we used to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. 
+People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge moral character of people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. Also, evidence from studies of person perception and social evaluation revealed that morality is a basic dimension for social evaluation and it is weighed more than traits from other dimensions such as competence and sociability [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020]. The importance of moral character may have been internalized to individuals' self-concept and the positive moral self is the most important aspect of identity [e.g., @strohminger_true_2017], and moral character is a standard we used to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. 
 
 [No real perceptual studies on moral character] 
-Given the importance of moral character, it is not surprised that people often assume that moral character related information are prioritized in human information processing system, especially 'bad' agents [e.g., the introduction part of @siegel_beliefs_2018]. A scrutiny of the evidence, however, revealed few direct evidence. For example, while @schupp_facilitated_2004, @ohman_face_2001 are cited as the evidence, they are using facial expressions as stimuli that do not contain any moral meaning; @skowronski_negativity_1989, @fiske_attention_1980, and @baumeister_bad_2001 are often cited but they were not referring to moral character in specific but using negative social traits, which include competence and sociability as well. For instance, @pratto_automatic_1991 focused on the desirability of personal traits, which is not specific to moral character either. While @vanneste_attention_2007 tried to study the attentional grabbing effect of the facial expression when the agent decided not to cooperate, the mechanism of the effect, however, can not be attributed to uncooperativeness *per se*, because participants who performed the dot-detection task have no idea about the moral character or behavior of that facial expression and therefore can have different interpretations of that facial expression. In short, though researchers in the field assumed that moral character, especially the bad one, is prioritized in information processing , direct evidence is scarce. This issue is not limited to moral character but common in person perception studies. As @freeman_dynamic_2011 put it, most studies didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception) and, if yes, (2) what are the underlying mechanisms of the prioritization effect.
+Given the importance of moral character, people often assume that moral character related information are prioritized in human information processing system, especially 'bad' agents [e.g., the introduction part of @siegel_beliefs_2018]. A scrutiny of the literature, however, revealed few direct evidence. For example, while @schupp_facilitated_2004 and @ohman_face_2001 were cited to support this view, they are using facial expressions as stimuli that do not contain any moral meaning. @skowronski_negativity_1989, @fiske_attention_1980, and @baumeister_bad_2001 were also cited as evidence, but they were not referring to moral character in specific but using negative social traits, which include many other traits. For instance, @pratto_automatic_1991 focused on the desirability of personal traits, which is not specific to moral character either. While @vanneste_attention_2007 studied the attentional grabbing effect of facial expressions when agents decided not to cooperate, the mechanism of the effect, however, could not be attributed to uncooperativeness *per se*, because participants who performed the dot-detection task have no idea about the moral character and can have very different interpretations of those facial expressions. In short, though researchers in the field assumed that moral character, especially the bad one, is prioritized in information processing , direct evidence is scarce. This issue is not limited to moral character but common in person perception studies. As @freeman_dynamic_2011 put it, most studies in person perception didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception) and, if yes, (2) what are the underlying mechanisms of the prioritization effect.
 
 [Challenge: operationalization of moral character in laboratory settings] 
-The scarcity of studies on low-level information process of moral character is not without reasons. When trying to study moral character's effect on information process (e.g., perception), one big challenge lies in the difficulty to operationalize the moral character. Morality is defined by context. Whether a behavior should be judged as moral or immoral depends on a number of factors such as intention, consequences [@cushman_role_2006; @young_neural_2007]. Also, whether a behavior is moral relevant depends on cultural and social norm [@haidt_new_2007; @rai_moral_2011]. These contextual factors, when studied in laboratory settings, have to be carefully controlled and manipulated by providing complex verbal information. However, in most classic cognitive paradigms, the stimuli are presented shortly and participants are required to make quick decisions, therefore long sentences or complicated scenarios are usually prohibited. 
+The scarcity of studies on low-level information process of moral character is not without reasons. When trying to study moral character's effect on information process (e.g., perception), one big challenge lies in the difficulty to operationalize the moral character. Morality is defined by context. Whether a behavior should be judged as moral or immoral depends on a number of factors such as intention, consequences [@cushman_role_2006; @young_neural_2007]. Also, whether a behavior is moral relevant depends on cultural and social norm [@haidt_new_2007; @rai_moral_2011]. These contextual factors, when studied in laboratory settings, have to be carefully controlled and manipulated by providing complex verbal information. These complex verbal information, however, does not suit most classic cognitive paradigms where stimuli are presented shortly and participants are required to make quick decisions. 
 
-To solve this issue, two approaches emerged in the last decade. The first approach used direct associative learning. For example, @shore_social_2013 asked participants first interact with a stranger, who was represented by a face on the screen. By manipulating the behavior associated with the face, participants can form an impression of the person through interaction and judge it as trustworthy or not. After getting such impression, participants then finished a attention blink task where the faces were used as stimuli. @shore_social_2013 found that faces associated with cooperative interaction history are preferentially processed in the pre-attention stage.
+To solve this issue, two approaches emerged in the last decade. The first approach used direct associative learning. For example, @shore_social_2013 asked participants first interact with a stranger, who was represented by a face on the screen. Participants formed impression of that person through interaction and judge him/her as trustworthy or not. After getting such impression, participants then finished a attention blink task where the faces were used as stimuli. Their findings revealed that faces associated with cooperative interaction history are preferentially processed in the pre-attention stage.
 
-Another approach used indirect associative learning, where participants first associate visual stimuli (e.g., faces) with descriptions of a person's moral behaviors, then perform a task that examine the differences between visual stimuli that associated with different moral behaviors. For example, @anderson_visual_2011 associated faces with different behaviors (both negative and neutral behaviors from both social and nonsocial domains) and then asked participants to perform a binocular rivalry task, where a face and a building were presented to each eye and participant need to report the content of their vision by pressing buttons. They found that faces associated negative social behaviors were dominant for longer time in the visual awareness than faces associated with other types of behaviors [but see @stein_no_2017]. @eiserbeck_visual_2020 combined indirect associative learning with attention blink paradigm, where neutral faces were associated with sentences about trust behaviors and asked participants to perform a attention blink task. They also found that neutral faces associated with negative trust behavior were processed preferentially. This indirect associative learning paradigm had been developed primarily for affective meanings, and these studies found that building such association requires minimal behavioral information [@bliss-moreau_individual_2008; @falvello_robustness_2015; @todorov_robust_2008]. A similar approach has been used to explore the prioritization of self-referential effect [@Sui_2012_JEPHPP], where even more abstract information (conceptual words, e.g., "self", "friend", "stranger") and even simpler visual cues (geometric shapes, e.g., triangle, circle, or square) were used. This simpler shape-label associative learning task produced robust self-prioritization effect.
+Another approach used indirect associative learning, where participants first associate visual stimuli (e.g., faces) with descriptions of a person's behaviors, then perform a task that examine the differences between visual stimuli that associated with different behaviors. For example, @anderson_visual_2011 associated faces with different behaviors (both negative and neutral behaviors from both social and nonsocial domains) and then asked participants to perform a binocular rivalry task, where a face and a building were presented to each eye and participant were required report the content of their vision by pressing buttons. They found that faces associated negative social behaviors were dominant for longer time in the visual awareness than faces associated with other types of behaviors [but see @stein_no_2017]. @eiserbeck_visual_2020 combined indirect associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors and asked participants to perform a attention blink task. They also found that neutral faces associated with negative behavior were processed preferentially. The indirect associative learning paradigm had been developed primarily for affective meanings, and these studies found that building such association requires minimal behavioral information [@bliss-moreau_individual_2008; @falvello_robustness_2015; @todorov_robust_2008]. A similar approach has been used to explore the prioritization of self-related information [@Sui_2012_JEPHPP], where more abstract concepts (person labels, e.g., "self", "friend", "stranger") and simpler visual cues (geometric shapes, e.g., triangle, circle, or square) were used. This simpler shape-label associative learning task produced robust self-prioritization effect.
 
 Both direct and indirect associative learning paradigms are consistent with the dynamic interactive model of person perception [@freeman_dynamic_2011]. The dynamic interactive model proposed that the perceived personal traits are interactively linked with behavior and sensory stimuli. By activating some sensory stimuli, some person traits can be activated. The associative learning task reverse engineering the process and linking the personal traits (moral character in our case) with new visual stimuli, therefore created a temporary but direct link between personal traits and visual stimuli. After creating such associations between different traits and different visual cues, we can then test the newly established trait-cue associations by different cognitive tasks and examine the instantly learned associations' influence on cognitive processing.
 
 [The current study] 
-The current study was designed to investigate the perceptual process of moral character the shape-label associative learning task. This paradigm has two major advantages over the other associative learning tasks. First, it only used a few number of labels that represent different moral characters, therefore control extra factors and avoid the semantic priming problem [c.f., @firestone_enhanced_2015]. Second, it uses non-social visual stimuli as cues, avoided the idiosyncratic features brought by using faces. Besides, the simplicity of the task allows it to be combined with other cognitive tasks. Using this shape-label associative learning and perpetual matching task, the current study aimed at answering two questions mentioned above: (1) whether moral character related information are prioritized, if so, what is the exact pattern; (2) what is the potential explanation for such pattern.
+The current study was designed to investigate the perceptual process of moral character by using the shape-label associative learning task. This paradigm has two major advantages over face-based indirect associative learning tasks. First, it only used a few number of labels that represent different moral characters, therefore control individual differences in interpreting moral meaning of behaviors. Second, it uses non-social visual stimuli as cues, avoided the idiosyncratic features brought by using faces. Besides, the simplicity of the task allows it to be easily combined with other cognitive tasks. Using this shape-label associative learning and perpetual matching task, the current study aimed at answering two questions mentioned above: (1) whether moral character related information are prioritized, if so, what is the exact pattern; (2) what is the potential explanation for such pattern.
 
-To investigate the first issue and validate that moral character concepts activated moral character as a social cue, we designed four experiments to explore and validate the paradigm. The first experiment directly adopted associative paradigm from @Sui_2012_JEPHPP and changed labels from "self", "friend", and "stranger" to "good-person", "neutral-person", and "bad-person". In the follow-up studies, we tested other character labels that have similar moral meaning ("kind-person", "neutral-person", and "evil-person"). In the third experiments, as in @anderson_visual_2011, we asked participants to learn associations between three different diagnostic behaviors and three different names, and then use the names as character labels for the associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape. All of these four experiments showed a consistent pattern of effect, that is, the visual cues that associated with positive moral character were prioritized. 
+To investigate the first issue and validate that moral character concepts activated moral character as a social cue, we designed four experiments to explore and validate the paradigm. The first experiment directly adopted associative paradigm from @Sui_2012_JEPHPP and changed labels from "self", "friend", and "stranger" to "good-person", "neutral-person", and "bad-person". In the follow-up studies, we tested other character labels that have similar moral meaning ("kind-person", "neutral-person", and "evil-person"). In the third experiments, as in @anderson_visual_2011, we asked participants to learn associations between three different diagnostic behaviors and three different names, and then use the names as character labels for the associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present labels and shapes. All of these four experiments showed a consistent results, that is, the visual cues that associated with positive moral character were prioritized. 
 
 Although the available studies agree that social/moral information can enhance the saliency of the sensory stimuli, yet the reported direction of the effect is not consistent. For instance, there are two studies reported a negativity effect where neutral faces associated with negative social behavioral were processed better than neutral faces that associated with neutral behaviors [@anderson_visual_2011; @eiserbeck_visual_2020; but see @stein_no_2017]. The underlying reasons for the prioritization was usually attributed to affective meaning of the negative behaviors, which, in essence, is a threatening effect. In contrast, there was one study reported a positivity effect, where faces associated with positive interaction history were prioritized over faces associated with neutral or negative interaction history. And the positivity effect was attributed to a value-based information process [@shore_social_2013]. 
 
 The direction of the effect leads to different underlying explanations. The negativity effect usually explained by the evolutionary adoptive mechanism where the threatening feature were prioritized. However, accumulating evidence supported the view that negativity effect, especially those related to affective stimuli, are prioritized because of the low-level physical features, e.g., low frequency feature in the facial expression [see a recent review, @pool_attentional_2016]. This is reflected in the pattern that threatening stimuli are prioritized in detection task, e.g., dot-probe task. In the current study, because all visual stimuli share similar physical features and we did not using detection task but matching task, therefore, it's not surprising that we didn't found a threatening effect.
 
-The positivity effect, on the other hand, appeared later in the processing stage and were attributed to its rewarding value (we limit the value-based account to rewarding value). The value based account is an appealing explanation, there were strong evidence showing that positive emotional stimuli are prioritized [@pool_attentional_2016]. For example, @anderson_value-driven_2011 found that stimuli associated with higher reward could be found more easily in a visual search task. The follow-up studies confirmed that value-based prioritization if a robust effect [@anderson_neurobiology_2019]. In our experiments, the positive moral character label "good person" may represent an indirect and positive value. The moral value of others was found to be profitable in previous survey [@abele_agency_2007].
+The positivity effect, on the other hand, appeared later in the processing stage and were attributed to its rewarding value (we limit the value-based account to rewarding value). The value based account is an appealing explanation, there were strong evidence supporting the view that positive emotional stimuli are prioritized [@pool_attentional_2016]. For example, @anderson_value-driven_2011 found that stimuli associated with higher reward could be found more easily in a visual search task. The follow-up studies confirmed that value-based prioritization if a robust effect [@anderson_neurobiology_2019]. In our experiments, the good character label "good person" may represent an indirect but positive value. The value of good others had been found in previous survey [@abele_agency_2007].
 
-When applying to social information such as moral character, both the value-based account and the threatening model ignored the social meaning of the stimuli. Increasing evidence supported the view that social categorization also impact our information processing, including perception [@xiao_perceiving_2016; @freeman_dynamic_2011]. Social categorization theory stated that we perceiving others based on whether or not belong to "us" [@turner_rediscovering_1987]. In other words, we may view a person with positive moral character as an in-group member, while a bad person as them [@ellemers_morality_2018]. If moral judgment is a social categorization process [@descioli_side-taking_2016; @mchugh_moral_2019], and if social categorization impact our visual perception [@xiao_perceiving_2016], then we can infer positive moral character may also be prioritized because we regard good person as an natural extension of the self.
+When applying to social information such as moral character, both the value-based account and the threatening model ignored the social meaning of the stimuli. Increasing evidence supported the view that social meaning of visual stimuli (e.g., social groups) also impacts our information processing, including perception [@xiao_perceiving_2016; @freeman_dynamic_2011]. Social categorization theory stated that we perceiving others based on whether or not belong to "us" [@turner_rediscovering_1987]. In other words, we may view a person with good character as an in-group member, while a bad person as them [@ellemers_morality_2018]. If moral judgment is an implicit social categorization process [@descioli_side-taking_2016; @mchugh_moral_2019], and if social categorization impact our visual perception [@xiao_perceiving_2016], then we can infer the prioritization of good character may be the results of a social categorization process, i.e., we regard good person as an natural extension of the self.
 
-However, the above four experiments could not distinguish between these possibilities, because the concept "good-person" creating an unexpected ambiguity for the identity of the good person. it can both be rewarding and be categorized as in-group member, and previous studies using associative learning paradigm revealed that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized.  
+However, the above four experiments could not distinguish between these possibilities, because the "good-person" label was not explicit about the identity. Therefore, the label "good person" could both be rewarding and be categorized as in-group member. Previous studies using associative learning paradigm revealed that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized.  
 
 [Distinguish two explanations by make self salient, exp3a, 3b, 6b] 
-Though both two the value-based attention and moral-based categorization accounts can explain the positivity effect found in first four experiments (i.e., prioritization of "good-person", but not "neutral person" and "bad person"), they have different prediction if the experimental design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe self or other. In this case the identity become salient and participants are less likely to spontaneously identify a good-other as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter merely confirmed one's personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized, or maybe good-other are even more prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
+Though both two the value-based attention and moral-based categorization accounts can explain the positivity effect found in first four experiments (i.e., prioritization of "good-person", but not "neutral person" and "bad person"), they have different prediction if the experimental design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe self or other. In this case the identity become salient and participants are less likely to spontaneously identify a good-other as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter merely confirmed one's personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while value-based attention theory predicts both are prioritized, or maybe good-other are even more prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
 
 We introduced identity (self vs. other) as an addition independent variable in exp 3a, 3b, and 6b. Now the moral valence is orthogonal to the identity. We found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A three-level Bayesian generalized linear mixed effect model showed that there was no effect of valence when the identity was other. This results showed that value-based attention was not likely the mechanism behind the pattern we observed in first four experiments. However, it is still unclear why good-self was prioritized. Besides the social-categorization explanation, it's also possible that good self is so unique that it is prioritized in all possible situation and therefore is not social categorization *per se*. 
 
@@ -156,7 +155,7 @@ We reported all the measurements, analyses, and results in all the experiments i
 
 All the experiments reported were not pre-registered. Most experiments (1a ~ 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more [@Simmons_2013_life], we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from unreported data in our three-level models (experiment 5, 6a, 6b) (See Table S1 for overview of these experiments). 
 
-All participant received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Tsinghua University. 
+All participant received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Psychology, Tsinghua University. 
 
  <!-- 21-word solution (Simmons, Nelson & Simonsohn, 2012; retrieved from http://ssrn.com/abstract=2160588) -->
 
